# my_loc8r

./: .gitignore  README.md  my_loc8r.py  package.json  pyproject.toml  requirements.txt  uglify.js
app_api/controllers/: api_controllers_base.py  locations_api_controller.py  locs_api_ctrl.py  reviews_api_controller.py  users_api_controller.py
app_api/models/: location_models.py  location_schema.py  user_model.py
app_client/: app.js  index.html
app_client/about/: about.controller.js  about.view.html
app_client/addReview/: addReview.controller.js
app_client/home/: home.controller.js  home.view.html  home.view.html.original  home.view.r1.html  home.view.sandbox.html
app_client/locationDetail/: locationDetail.controller.js  locationDetail.view.html  locationDetail.view.r2.html
app_client/locations/: locations.controller.js  locations.view.html
app_client/reviewModal/: reviewModal.controller.js  reviewModal.view.html
app_server/controllers/: locations.py  locations_ctrl.py
app_server/templates/: generic_text.html  html_macros.jinja  layout.html  location.html  location_review_form.html  locations.html
bootstrap_scss/: index.html
location_data_files/: authors.json  businesses.json  reviews.json  reviews_negative_roach.txt  reviews_neutral_roach.txt  reviews_positive_roach.txt  roach_names.txt
src/my_loc8r_app/: my_loc8r.py
tests/: api_auth_tests.py  api_endpoint_testing.py  api_endpoint_tests.py  api_location_tests.py  api_review_tests.py  api_tests.py  api_tests.py.original.py  api_user_tests.py  app_tests.py  location_test_helpers.py
(+71 files in other folders)
