[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my_loc8r_app_glennc15"
version = "0.0.1"
authors = [
  { name="Glenn", email="martin.crosby15@gmail.com" },
]
description = "my implementation of Loc8r from Simon Holmes"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/glennc15/my_loc8r"
